--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,6 @@ jobs:
           username: ${{ secrets.ftp_user }}
           password: ${{ secrets.ftp_pwd }}
           local-dir: ./build/
-          server-dir: ./htdocs/
+          server-dir: ./www/wwwroot/www.monster-hash.cn/
         env:
           CI: true
