--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,10 +27,10 @@ jobs:
       - name: FTP Deploy
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
-          server: ftp://monster-hash.cn/www/wwwroot/www.monster-hash.cn/my-website/build
+          server: monster-hash.cn/www/wwwroot/www.monster-hash.cn/my-website/build
           username: ${{ secrets.ftp_user }}
           password: ${{ secrets.ftp_pwd }}
-          git-ftp-args: --insecure
+          
           local-dir: ./build/
           
         env:
