--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
       - name: FTP-Deploy-Action
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
-          server: ftp.monster-hash.cn/www/wwwroot/www.monster-hash.cn/my-website/build
+          server: ftp.monster-hash.cn
           username: ${{ secrets.ftp_user }}
           password: ${{ secrets.ftp_pwd }}
           
