--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,16 +24,15 @@ jobs:
       - run: npm install
       - run: npm run build --if-present
 
-      - name: FTP-Deploy-Action
-        uses: SamKirkland/FTP-Deploy-Action@4.0.0
-        with:
-          server: ftp.monster-hash.cn
-          username: ${{ secrets.ftp_user }}
-          password: ${{ secrets.ftp_pwd }}
-          protocol: ftp
-          port: 21
-          local-dir: ./build/
-          server-dir: www/wwwroot/www.monster-hash.cn/my-website/build/
-          
+      - name: rsync deployments
+      uses: burnett01/rsync-deployments@3.0
+      with:
+        switches: -avzr --delete
+        path: build/
+        remote_path: /www/wwwroot/www.monster-hash.cn/my-website/build/
+        remote_host: monster-hash.cn
+        remote_port: 22
+        remote_user: test1
+        remote_key: ${{ secrets.DEPLOY_KEY }}
         env:
           CI: true
