--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,15 +24,14 @@ jobs:
       - run: npm install
       - run: npm run build --if-present
 
-      - name: rsync deployments
-        uses: burnett01/rsync-deployments@3.0
+      - name: FTP-Deploy-Action
+        uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
-          switches: -avzr --delete
-          path: build/
-          remote_path: /www/wwwroot/www.monster-hash.cn/my-website/build/
-          remote_host: monster-hash.cn
-          remote_port: 22
-          remote_user: root
-          remote_key: ${{ secrets.DEPLOY_KEY }}
+          server: ftp.39.102.39.0
+          username: ${{ secrets.ftp_user }}
+          password: ${{ secrets.ftp_pwd }}
+          
+          local-dir: ./build/
+          server-dir: www/wwwroot/www.***********.cn/my-website/build/
         env:
           CI: true
