--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,11 +27,12 @@ jobs:
       - name: FTP-Deploy-Action
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
-          server: ftp.39.102.39.0
+          server: 39.102.39.0
+          port: 21
           username: ${{ secrets.ftp_user }}
           password: ${{ secrets.ftp_pwd }}
           
           local-dir: ./build/
-          server-dir: www/wwwroot/www.***********.cn/my-website/build/
+          server-dir: www/wwwroot/www.monster-hash.cn/my-website/build/
         env:
           CI: true
