--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
       - name: FTP-Deploy-Action
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
-          server: monster-hash.cn
+          server: www.monster-hash.cn
           port: 21
           username: ${{ secrets.ftp_user }}
           password: ${{ secrets.ftp_pwd }}
